[package]
name = "polars_ext"
version = "0.5.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
polars = { version = "0.50.0", default-features = false, features = [
    "dtype-struct",
    "fmt_no_tty",
    "lazy",
    "round_series",
    # "row_hash",
] }
polars-arrow = { version = "0.50.0", optional = true }

[features]
default = []
temporal_conversions = ["dep:polars-arrow"]
